<resources>
    <string name="app_name">epam-internship-android-kutsyy</string>
    <string name="textview_text">Android EPAM internship course</string>
    <string name="button_text">Get job</string>
    <string name="ingredients">INGREDIENTS</string>
    <string name="ingredients_example">Soy sauce - 3/4 cup \nWater - 1/2 cup\n Brown sugar - 1/4 cup\n Ground ginger - 1/2 teaspoon\n Minced garlic - 1/2 teaspoon \nCornstarch - 4 tablespoons \nChicken breasts - 2\n Stir-fry vegetables - 1 (12 oz.)\n Brown rice - 3 cups</string>
    <string name="toolbar_text_example">Just foods</string>
    <string name="sort_item_menu">Sort</string>
    <string name="load_error">"Load error from server"</string>
    <string name="filter">Фильтр</string>
    <string name="sort_by_alphabet">Сортировка по алфавиту</string>
    <string name="by_up">По возрастанию</string>
    <string name="by_down">По убыванию</string>
    <string name="apply">Применить</string>
</resources>